fix scrollbar behavior on windows

--- a/src/components/Navbar/PersonalSpaceOverlay/styles.module.scss
+++ b/src/components/Navbar/PersonalSpaceOverlay/styles.module.scss
@@ -9,7 +9,7 @@
     .content {
         position: relative;
         border-radius: 0.5em;
-        overflow: scroll;
+        overflow: auto;
         height: 80vh;
         width: 80vw;
     }
